Move copy, paste, import and export actions to CORE project model.
Remove old PXR parser, writer and builder.